JOORSAND/src/objects/Restricted_Picklist__mdt.object
<CustomObject>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist_values__c</fullName>
        <label>Picklist values</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <label>Record Type Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Restricted Picklist</label>
    <pluralLabel>Restricted Picklists</pluralLabel>
</CustomObject>